--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "engines": { 
     "node": "16.0.0" 
   },
+
+  "scripts": {
+    "postinstall": "ng build"
+  }
+  ,
+
   "author": "",
   "license": "ISC",
   "dependencies": {
